--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,17 @@
 
 theme: jekyll-agency
 
-url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+url    : "https://www.alpacasoftware.uk/" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : Your Awesome Website
-email      : your-email@example.com #this is also the email contact forms will go to
-description: "Site description"
+title      : Alpaca Software
+email      : alpacasoftwareltd@gmail.com #this is also the email contact forms will go to
+description: "Quality software and best practices"
 author     : Your Name
-# logo:     #optional, defaults to site title
-  # path: assets\img\clients\creative-market.jpg
-  # height: 60 #height in px, defaults to 52px
+
+logo:     #optional, defaults to site title
+  path: assets\img\alpacalogo_notext.png
+  height: 60 #height in px, defaults to 52px
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
