--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -72,9 +72,10 @@ en: &DEFAULT_EN
     title: "About Us"
     text: "our story"
     body: >
-      We are a London-based consultancy helping startups and other organizations to create
-      great products. What sets us apart from the competition, is that we will deliver
-      maintenable, documented and tested code following industry best practices.
+      We are a small London consultancy helping startups and other organizations to create
+      great products. We deliver well crafted code with documentation, test coverage and
+      following best practices. Our aim is to provice software that will last and will be
+      easy to build upon.
     section: about
 
   clients:
