--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -54,7 +54,7 @@ en: &DEFAULT_EN
 
   portfolio:
     title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
+    text: "Have a look in some of the things we built"
     section: portfolio
     closebutton: "Close Project"
 
